--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 
             <div class="col-12 d-flex justify-content-center mt-4">
                 <button type="button" class="btn btn-success" id="gameStartBtn">Play</button>
+                <div class="col-12 d-flex justify-content-end">
+                    <div class>
+
+                    </div>
+                </div>
             </div>
 
             <div class="col-12" id="resetGame">
