--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/cc81025709.js" crossorigin="anonymous"></script>
-    <title>Campominato</title>
+    <title>Minefield</title>
 </head>
 <body>
     
@@ -15,27 +15,24 @@
         <div class="container">
           <div class="row pt-2 pb-3 px-5 py-5 rounded bg-game">
             <div class="col-12 d-flex flex-column game-setting-section">
-                <div class="align-self-center fs-1 mb-2 text-warning">Campominato</div>
-                <label for="customRange3" class="align-self-center fs-5 mb-4 text-white form-label">Livello di difficoltà</label>
+                <div class="align-self-center fs-1 mb-2 text-warning">Minefield</div>
+                <div class="align-self-center fs-3 mb-3 text-warning">Watch you step!</div>
+                <label for="customRange3" class="align-self-center fs-5 mb-4 text-white form-label">Difficulty level</label>
                 <div class="col-12 d-flex justify-content-between mb-1">
-                    <div class="text-white">Very Easy</div>
                     <div class="text-white">Easy</div>
                     <div class="text-white">Medium</div>
+                    <div class="text-white">Expert</div>
                     <div class="text-white">Hard</div>
-                    <div class="text-white">Very Hard</div>
                 </div>
-                <input type="range" class="range" min="5" max="25" step="5" id="levelRange">
+                <input type="range" class="range" min="4" max="12" step="1" id="levelRange">
             </div>
 
             <div class="col-12 d-flex justify-content-center mt-4">
                 <button type="button" class="btn btn-success" id="gameStartBtn">Play</button>
-                <div class="col-12 d-flex justify-content-end">
-                    <div class>
+            </div>    
+            <div id="point-section" class="col-12 d-flex justify-content-end">
 
-                    </div>
-                </div>
             </div>
-
             <div class="col-12" id="resetGame">
                 <div id="grill">
                 </div>
