EDIT background and grafic style

--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
     <title>Minefield</title>
 </head>
 <body>
-    
+
     <main>
         <div class="container">
           <div class="row pt-2 pb-3 px-5 py-5 rounded bg-game">
             <div class="col-12 d-flex flex-column game-setting-section">
-                <div class="align-self-center fs-1 mb-2 text-warning">Minefield</div>
-                <div class="align-self-center fs-3 mb-3 text-warning">Watch you step!</div>
+                <div class="align-self-center fs-1 mb-2 text-warning">
+                    <i class="fa-solid fa-explosion me-2 fs-3"></i>
+                    Minefield
+                </div>
+                <div class="align-self-center fs-3 mb-3 text-danger">
+                    Watch you step!
+                    <i class="fa-solid fa-person-falling-burst text-warning ms-2"></i>
+                </div>
                 <label for="customRange3" class="align-self-center fs-5 mb-4 text-white form-label">Difficulty level</label>
                 <div class="col-12 d-flex justify-content-between mb-1">
                     <div class="text-white">Easy</div>
