EDIT and game in case of victory

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
           <div class="row pt-2 pb-3 px-5 py-5 rounded bg-game">
             <div class="col-12 d-flex flex-column game-setting-section">
                 <div class="align-self-center fs-1 mb-2 text-warning">
-                    <i class="fa-solid fa-explosion me-2 fs-3"></i>
+                    <i class="fa-solid fa-explosion me-2 ms-n2 fs-3"></i>
                     Minefield
                 </div>
                 <div class="align-self-center fs-3 mb-3 text-danger">
-                    Watch you step!
+                    Watch where you step!
                     <i class="fa-solid fa-person-falling-burst text-warning ms-2"></i>
                 </div>
                 <label for="customRange3" class="align-self-center fs-5 mb-4 text-white form-label">Difficulty level</label>
@@ -36,10 +36,10 @@
             <div class="col-12 d-flex justify-content-center mt-4">
                 <button type="button" class="btn btn-success" id="gameStartBtn">Play</button>
             </div>    
-            <div id="point-section" class="col-12 d-flex justify-content-end">
+            <div id="point-section" class="col-12 d-flex justify-content-end mt-2">
 
             </div>
-            <div class="col-12" id="resetGame">
+            <div class="col-12">
                 <div id="grill">
                 </div>
             </div>
